--- a/package/templates/impala.j2
+++ b/package/templates/impala.j2
@@ -4,15 +4,36 @@ IMPALA_STATE_STORE_PORT=24000
 IMPALA_BACKEND_PORT=22000
 IMPALA_LOG_DIR=/var/log/impala
 
-IMPALA_CATALOG_ARGS=" -log_dir=${IMPALA_LOG_DIR} "
-IMPALA_STATE_STORE_ARGS=" -log_dir=${IMPALA_LOG_DIR} -state_store_port=${IMPALA_STATE_STORE_PORT}"
+IMPALA_CATALOG_ARGS=" \
+    -log_dir=${IMPALA_LOG_DIR} \
+	{% if security_enabled %}
+    -kerberos_reinit_interval=60 \
+    -principal=impala/{{current_host_name}}@EXAMPLE.COM \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
+	{% endif %}
+	"
+IMPALA_STATE_STORE_ARGS=" \
+    -log_dir=${IMPALA_LOG_DIR} \
+    -state_store_port=${IMPALA_STATE_STORE_PORT} \
+	{% if security_enabled %}
+    -kerberos_reinit_interval=60 \
+    -principal=impala/{{current_host_name}}@EXAMPLE.COM \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
+	{% endif %}
+	"
 IMPALA_SERVER_ARGS=" \
     -log_dir=${IMPALA_LOG_DIR} \
     -catalog_service_host=${IMPALA_CATALOG_SERVICE_HOST} \
     -state_store_port=${IMPALA_STATE_STORE_PORT} \
     -use_statestore \
     -state_store_host=${IMPALA_STATE_STORE_HOST} \
-    -be_port=${IMPALA_BACKEND_PORT}"
+    -be_port=${IMPALA_BACKEND_PORT} \
+	{% if security_enabled %}
+    -kerberos_reinit_interval=60 \
+    -principal=impala/{{current_host_name}}@EXAMPLE.COM \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
+	{% endif %}
+	"
 
 ENABLE_CORE_DUMPS=false
 
