--- a/package/templates/impala.j2
+++ b/package/templates/impala.j2
@@ -8,14 +8,20 @@ MEM_LIMIT={{mem_limit}}
 
 IMPALA_CATALOG_ARGS=" \
     -log_dir=${IMPALA_LOG_DIR} \
+    -state_store_host=${IMPALA_STATE_STORE_HOST} \
+        {% if security_enabled %}
+    -kerberos_reinit_interval=60 \
+    -principal=impala/{{current_host_name}}@{{realm_name}} \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
+        {% endif %}
 	"
 IMPALA_STATE_STORE_ARGS=" \
     -log_dir=${IMPALA_LOG_DIR} \
     -state_store_port=${IMPALA_STATE_STORE_PORT} \
 	{% if security_enabled %}
     -kerberos_reinit_interval=60 \
-    -principal=impala/{{current_host_name}}@EXAMPLE.COM \
-    -keytab_file=/etc/security/keytabs/impala-http.keytab \
+    -principal=impala/{{current_host_name}}@{{realm_name}} \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
 	{% endif %}
 	"
 IMPALA_SERVER_ARGS=" \
@@ -29,8 +35,8 @@ IMPALA_SERVER_ARGS=" \
     -be_port=${IMPALA_BACKEND_PORT} \
 	{% if security_enabled %}
     -kerberos_reinit_interval=60 \
-    -principal=impala/{{current_host_name}}@EXAMPLE.COM \
-    -keytab_file=/etc/security/keytabs/impala-http.keytab \
+    -principal=impala/{{current_host_name}}@{{realm_name}} \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
 	{% endif %}
 	"
 
