--- a/package/templates/init_lib.sh.j2
+++ b/package/templates/init_lib.sh.j2
@@ -1,5 +1,4 @@
-version=`hdp-select status hadoop-client | sed 's/hadoop-client - \(.*\)/\1/' | tr -d '\r'`
-impala_path='/usr/hdp/'${version}
+impala_path='{{stack_root}}/{{stack_version_buildnum}}'
 ln -sf  `echo -e $impala_path'/hadoop/hadoop-common.jar /usr/lib/hadoop/hadoop-common.jar' | tr -d '\r' | tr -d '?'`
 ln -sf  `echo -e $impala_path'/hadoop/hadoop-annotations.jar /usr/lib/impala/lib/hadoop-annotations.jar' | tr -d '\r' | tr -d '?'`
 ln -sf  `echo -e $impala_path'/hadoop/hadoop-auth.jar /usr/lib/impala/lib/hadoop-auth.jar' | tr -d '\r' | tr -d '?'`
@@ -33,12 +32,8 @@ ln -sf  `echo -e $impala_path'/hive/lib/hive-shims-common.jar /usr/lib/impala/li
 ln -sf  `echo -e $impala_path'/hive/lib/hive-shims-scheduler.jar /usr/lib/impala/lib/hive-shims-scheduler.jar' | tr -d '\r' | tr -d '?'`
 ln -sf  `echo -e $impala_path'/hive/lib/hive-shims.jar /usr/lib/impala/lib/hive-shims.jar' | tr -d '\r' | tr -d '?'` 
 ln -sf  `echo -e $impala_path'/zookeeper/zookeeper.jar /usr/lib/impala/lib/zookeeper.jar' | tr -d '\r' | tr -d '?'`
-ln -sf  `echo -e $impala_path'/hbase/lib/hbase-annotations.jar /usr/lib/impala/lib/hbase-annotations.jar' | tr -d '\r' | tr -d '?'`
-ln -sf  `echo -e $impala_path'/hbase/lib/hbase-client.jar /usr/lib/impala/lib/hbase-client.jar' | tr -d '\r' | tr -d '?'`
-ln -sf  `echo -e $impala_path'/hbase/lib/hbase-common.jar /usr/lib/impala/lib/hbase-common.jar' | tr -d '\r' | tr -d '?'`
-ln -sf  `echo -e $impala_path'/hbase/lib/hbase-protocol.jar /usr/lib/impala/lib/hbase-protocol.jar' | tr -d '\r' | tr -d '?'`
-yes | cp -rf  `echo -e $impala_path'/hbase/bin/hbase /usr/bin/' | tr -d '\r' | tr -d '?'`
-#add java-home
-JAVA_HOME='/usr/jdk64/'`ls /usr/jdk64 | xargs echo`
-EXPORT_JAVA_HOME='export JAVA_HOME='$JAVA_HOME
-echo -e $EXPORT_JAVA_HOME |  tr -d '\r' >> /etc/default/bigtop-utils
+ln -sf  `echo -e '/usr/lib/hbase/hbase-annotations.jar /usr/lib/impala/lib/hbase-annotations.jar' | tr -d '\r' | tr -d '?'`
+ln -sf  `echo -e '/usr/lib/hbase/hbase-client.jar /usr/lib/impala/lib/hbase-client.jar' | tr -d '\r' | tr -d '?'`
+ln -sf  `echo -e '/usr/lib/hbase/hbase-common.jar /usr/lib/impala/lib/hbase-common.jar' | tr -d '\r' | tr -d '?'`
+ln -sf  `echo -e '/usr/lib/hbase/hbase-protocol.jar /usr/lib/impala/lib/hbase-protocol.jar' | tr -d '\r' | tr -d '?'`
+ln -sf  `echo -e '/usr/lib/impala/lib/{{datalakeJar}} /usr/lib/impala/lib/hadoop-azure-datalake.jar' | tr -d '\r' | tr -d '?'`
