update README; remove  configure(env) from start; remove JAVA_HOME; ENABLE_CORE_DUMPS=true;

--- a/package/templates/impala.j2
+++ b/package/templates/impala.j2
@@ -40,7 +40,7 @@ IMPALA_SERVER_ARGS=" \
 	{% endif %}
 	"
 
-ENABLE_CORE_DUMPS=false
+ENABLE_CORE_DUMPS=true
 
 LIBHDFS_OPTS=-Djava.library.path=/usr/lib/impala/lib
 # MYSQL_CONNECTOR_JAR=/usr/share/java/mysql-connector-java.jar
